--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,10 @@
     "node": true
   },
   "rules": {
-    "quotes": [1, "double"],
+    "semi": [2, "always"],
+    "quotes": [2, "double"],
+    "comma-dangle": [2, "never"],
+    "indent": [2, 2],
     "eol-last": [0],
     "no-mixed-requires": [0],
     "no-underscore_dangle": [0]
