--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "eslint": "^3.13.1",
-    "eslint-loader": "^1.6.1"
+    "eslint-loader": "^1.6.1",
+    "webpack": "^1.14.0",
+    "webpack-dev-server": "^1.16.2"
   }
 }
