--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "eslint": "^3.13.1",
     "eslint-loader": "^1.6.1",
     "webpack": "^1.14.0",
-    "webpack-dev-server": "^1.16.2"
+    "webpack-dev-server": "^1.16.2",
+    "style-loader": "^0.13.1",
+    "css-loader": "^0.25.0",
+    "node-sass": "^3.9.3",
+    "sass-loader": "^4.0.2"
   }
 }
