--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "description": "",
   "main": "src/main.js",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/chaseries/es2015-starter.git"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint src"
