--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "es2015-starter",
+  "name": "vue-starter",
   "version": "0.1.0",
   "description": "",
   "main": "src/main.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/chaseries/es2015-starter.git"
+    "url": "git://github.com/chaseries/vue-starter.git"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -19,13 +19,14 @@
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
+    "css-loader": "^0.25.0",
     "eslint": "^3.13.1",
     "eslint-loader": "^1.6.1",
-    "webpack": "^1.14.0",
-    "webpack-dev-server": "^1.16.2",
-    "style-loader": "^0.13.1",
-    "css-loader": "^0.25.0",
     "node-sass": "^3.9.3",
-    "sass-loader": "^4.0.2"
+    "sass-loader": "^4.0.2",
+    "style-loader": "^0.13.1",
+    "vue": "^2.2.6",
+    "webpack": "^1.14.0",
+    "webpack-dev-server": "^1.16.2"
   }
 }
